--- a/market-report.html
+++ b/market-report.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+			<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+		<link rel="stylesheet" href = "css/style.css"
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" ></script>
 </head>
 <body>
 		<h1>Exceptional</h1>
