--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -2,11 +2,14 @@
 <html>
 <head>
 	<meta charset="utf-8">
+			<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+		<link rel="stylesheet" href = "css/style.css"
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" ></script>
 	<title>Exceptional Realty Group - Luxury Homes - Listings</title>
 </head>
 <body>
 		<h1>Exceptional</h1>
-		<h2>Realty Group</h2>
+		<h2 class="milk-text">Realty Group</h2>
 
 		<!-- links -->
 		<a href="index.html">About</a>
